Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/neg/OrderedIntersections.out
OrderedIntersections.java:17:40: compiler.err.already.defined: kindname.method, <t1>smf(t1), kindname.class, OrderedIntersections
1 error
